fixed broken css

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -1247,6 +1247,21 @@ header td {
   display: none;
 }
 
+#groupAssignment {
+  z-index: 9000;
+  width: 100px;
+  background: var(--color-background);
+  text-align: center;
+  position: fixed;
+  top: 0%;
+  left: 50%;
+  margin-top: 7px;
+  margin-left: -50px;
+  border-style: solid;
+  border-width: 1px;
+  display: none;
+}
+
 .navheader {
   height: 20px;
   margin-bottom: 10px;
@@ -1411,15 +1426,6 @@ div .navButt:hover {
     width: 35px;
   }
 }
-
-#groupbutton {
-  float:right;
-  cursor: pointer;
-  height: 50px;
-  width: 50px;
-}
-
-
 #div2 {
   position: absolute;
   top: 50px;
